force-app/main/default/objects/A_New_custom_object__c/A_New_custom_object__c.object-meta.xml
<CustomObject>
    <label>A New custom object</label>
    <nameField>
        <label>A New custom object Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>A New custom objects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>