force-app/main/default/objects/A_New_custom_object__c/fields/ABC__c.field-meta.xml
<CustomField>
    <fullName>ABC__c</fullName>
    <description>Adding the description</description>
    <label>ABC</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A</fullName>
            </value>
            <value>
                <fullName>B</fullName>
            </value>
            <value>
                <fullName>C</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>