force-app/main/default/objects/A_New_custom_object__c/fields/Automated__c.field-meta.xml
<CustomField>
    <fullName>Automated__c</fullName>
    <label>Automated</label>
    <length>12</length>
    <type>Text</type>
</CustomField>