force-app/main/default/objects/A_New_custom_object__c/fields/Back_promotion_issue__c.field-meta.xml
<CustomField>
    <fullName>Back_promotion_issue__c</fullName>
    <label>Back promotion issue</label>
    <length>12</length>
    <type>Text</type>
</CustomField>