force-app/main/default/objects/A_New_custom_object__c/fields/Custom_field2__c.field-meta.xml
<CustomField>
    <fullName>Custom_field2__c</fullName>
    <description>kjgkgkgkgkgkghkhgk</description>
    <label>Custom field2</label>
    <length>12</length>
    <type>Text</type>
</CustomField>