force-app/main/default/objects/A_New_custom_object__c/fields/Test_for_Project__c.field-meta.xml
<CustomField>
    <fullName>Test_for_Project__c</fullName>
    <label>Test for Project</label>
    <length>15</length>
    <type>Text</type>
</CustomField>