force-app/main/default/objects/A_New_custom_object__c/fields/Test_git_step__c.field-meta.xml
<CustomField>
    <fullName>Test_git_step__c</fullName>
    <label>Test git step</label>
    <type>TextArea</type>
</CustomField>